Corrected GV specific org.json json local repository configuration. Corrected JSON<->XML numeric values conversion.